intel-vaapi-driver NEWS -- summary of changes.  2020-06-01
Copyright (C) 2009-2023 Intel Corporation

Version 2.4.6 - XX.XX.XXXX (IRQL fork)

Version 2.4.5 - 11.11.2025 (IRQL fork)

* Expose ARGB as a VPP format on ILK

    Ironlake is affected by the same issue as Sandybridge with
    these formats, meaning that a workaround is needed for Chromium.

* Improvements to ARGB handling in the VPP backend
* Don't advertise VAProfileHEVCMain10 format support on HSW and IVB.
* Disable this driver's Wayland backend by default.

    This lets the VA-API library use zwp_linux_dmabuf_v1 instead
    which is more preferable due to compositors migrating to it.

    If any user requires legacy wl_drm support, a build time option
    remains.

* Minor cleanup.

Version 2.4.4 - 06.Apr.2025 (IRQL fork)

* Add RPM packaging (Thanks @sergiorussia)
* Move ArchLinux packaging into main repository
* Minor code cleanup.
* Expose ARGB as a surface, attempt two.
* Update SECURITY.md
* Import an optimization from the iHD driver.
* Fix a potential deadlock problem in i965_put_surface_x11
* Import a workaround for low-resolution encoding on low-power Gen 8 and 9 hardware.
* Move some defines into va_backend_compat, also fixes potential errors when using an older libva.
* Fix non-RGB pixel format regressions introduced in 2.4.3

Version 2.4.3 - 12.Mar.2025 (IRQL fork)

* Fix Chromium VA-API decoding
* Expose ARGB support within surfaces and VPP
* Implement vaMapBuffer2
* Implement vaSyncBuffer
* Implement vaSyncSurface2
* Add back rate-control counter support, enable with environment variable `I965_RC_COUNTER=1`
* Silence some VA errors when a VAProfile is not found
* Fixed VP8 hybrid encoding handling, enable with environment variable `I965_VP8_ENCODE=1`
* Allow VA_SURFACE_ATTRIB_MEM_TYPE_DRM_PRIME_3 in i965_ExportSurfaceHandle
* Expose VAConfigAttribMaxPictureWidth
* Expose VAConfigAttribMaxPictureHeight
* Fix crashes for Wayland users when wl_drm is not available